[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=1]
[ext_resource path="res://content/gui/overlays/other/BriefingOverlay.gd" type="Script" id=2]

[node name="BriefingOverlay" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0.257813, 0.257813, 0.257813, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 32
alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="Background/Margin/VBox"]
margin_right = 728.0
margin_bottom = 566.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
bbcode_text = "These are your tasks for today:"
meta_underlined = false
text = "These are your tasks for today:"

[node name="TextureRect" type="TextureRect" parent="Background/Margin/VBox"]
margin_top = 598.0
margin_right = 728.0
margin_bottom = 1165.0
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="Background/Margin/VBox"]
margin_top = 1197.0
margin_right = 728.0
margin_bottom = 1325.0

[node name="YesButton" type="Button" parent="Background/Margin/VBox/HBox"]
margin_right = 362.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Start work"

[node name="NoButton" type="Button" parent="Background/Margin/VBox/HBox"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Cancel"

[connection signal="pressed" from="Background/Margin/VBox/HBox/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/HBox/NoButton" to="." method="_on_NoButton_pressed"]
